tests/error/int2char_type.src
.IPPcode18
defvar GF@a
defvar GF@b
move GF@a string@a
int2char GF@a GF@a